modified:   components/TimeGraph.jsx 	modified:   config.json 	modified:   pages/index.js 	modified:   services/LampService.js

--- a/config.json
+++ b/config.json
@@ -4,7 +4,9 @@
         "handle": {
             "data": "api/data",
             "toggle": "api/toggle",
-            "state": "api/state"
+            "state": "api/state",
+            "plt": "api/plt",
+            "img": "api/plt/img"
         }
     }
 }
