--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
             "toggle": "api/toggle",
             "state": "api/state",
             "plt": "api/plt",
-            "img": "api/plt/img"
+            "img": "api/plt/img",
+            "graphdata": "api/graphdata"
         }
     }
 }
