--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.29.4",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
