--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
             "state": "api/state",
             "plt": "api/plt",
             "img": "api/plt/img",
-            "graphdata": "api/graphdata"
+            "graphdata": "api/graphdata",
+            "monthlydata": "api/monthly"
         }
     }
 }
