--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.16.0",
     "moment": "^2.29.4",
     "next": "13.0.3",
     "react": "18.2.0",
